--- a/codigo.html
+++ b/codigo.html
@@ -24,14 +24,14 @@
 			<input type="tel" maxlength="1" name="codigo" class="code" id="y">
 			<input type="tel" maxlength="1" name="codigo" class="code" id="z">
 		</div>
+		<div class="ocultar alert" id="alertNuevoCodigo"></div>
+		<div>
 		<div class="text-center m-top-30">
 			<p>Enter the code sent to +51 <span id="numCel"></span></p>
-			<a "><button class="btn btn-default btn-lg btn-siguiente">Resend code</button></a>
+			<a "><button id="resendCode" class="btn btn-default btn-lg btn-siguiente">Resend code</button></a>
 		</div>
-		<div>
-			<div class="next">
+		<div class="next">
 		    <a id="validCode" class="nextText" >NEXT</a>
-		  </div>
 		</div>
 	</div>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
