--- a/datos.html
+++ b/datos.html
@@ -20,26 +20,29 @@
 		</div>
 		<br>
 		<div class="panel-body" id="formulario">
-			<form id="loginform" class="form-horizontal" role="form">
-				<div class="cont-icono left-addon m-bottom-5">
-					<i class="glyphicon glyphicon-user"></i>
-					<input id="nombre" type="text" class="form-control" name="username" value="" placeholder="  First Name     Last Name">
+			<div class="container">
+				<div class="user">
+					<span class="glyphicon glyphicon-user icon-user" aria-hidden="true"></span>
+					<input type="text" name="nombres" placeholder="First Name" autofocus="autofocus" class="userNom mayuscula" id="nombre">
+					<input type="text" name="apellido" class="userNom mayuscula" placeholder="Last Name" id="apellido">
 				</div>
-				<div class="cont-icono left-addon m-bottom-5">
-					<i class="glyphicon glyphicon-envelope"></i>
-					<input id="email" type="email" class="form-control" name="email" placeholder="  Email">
+				<div class="user">
+					<span class="glyphicon glyphicon-envelope icono-1" aria-hidden="true"></span>
+					<input id="email" type="email" name="nombre" placeholder="Email" class="email">
 				</div>
 				<div class="input-group">
-					<div class="checkbox">
+					<div class="checkbox terms">
 						<label>
-							<input id="login-remember" type="checkbox" name="remember" value="1"> I agree to Lyft's <b class="blue"> Terms of Service </b>
+							<input id="terms" type="checkbox" name="remember" value="1"> I agree to Lyft's <b class="blue"> Terms of Service </b>
 						</label>
 					</div>
 				</div>
-			</form>
+			</div>
+
+		</div>
 			<div>
-			<div class="next">
-		    <a id="btn" class="nextText">NEXT</a>
+			<div id="btn" class="next">
+		    <a  class="nextText">NEXT</a>
 		  </div>
 		</div>
 		</div>
@@ -48,3 +51,5 @@
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
+
+		
