--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Lyft</title>
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/main.css"/>
   <link rel="stylesheet" type="text/css" href="css/utilities.css"/>
@@ -26,19 +25,20 @@
 		        <ul class="dropdown-menu">
 		          <li><a href="#"></a></li>
 		        </ul>
-		      </div><!-- /btn-group -->
+		      </div>
 		      <input class="form-control" name="phone" id="phoneId" type="telefono" maxlength="9" placeholder="987 654 321">
-		    </div><!-- /input-group -->
+		    </div>
 		  	<div class="s-title"><h5>We'll send a text to verify your phone</h5></div>
-		  </div><!-- /.col-lg-6 -->
-		</div>
-		<div>
-			<div class="next">
-		    <a id="siguiente" class="nextText">NEXT</a>
 		  </div>
+		</div>
+		<div class="ocultar alert" id="alertDigitos"></div>
+		<div class="ocultar alert" id="codigoCel"></div>
+		<div id="siguiente" class="next">
+		  <a class="nextText">NEXT</a>
 		</div>
 	</div>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
+
