validando hasta el perfil

--- a/datos.html
+++ b/datos.html
@@ -41,9 +41,7 @@
 
 		</div>
 			<div>
-			<div id="btn" class="next">
-		    <a  class="nextText">NEXT</a>
-		  </div>
+			<a id="btn" class="next">NEXT</a>
 		</div>
 		</div>
 	</div>
