--- a/profile.html
+++ b/profile.html
@@ -23,9 +23,9 @@
       <div class="divider"></div>
       <div class="left-align">
         <ul>
-          <li><i class="small material-icons">home</i>From the best city ever</li>
-          <li><i class="small material-icons">music_note</i>Favorite music</li>
-          <li><i class="small material-icons">perm_identity</i>I'm going places</li>
+          <li class="datosUser"><i class="small m-left material-icons">home</i>From the best city ever</li>
+          <li class="datosUser"><i class="small m-left material-icons">music_note</i>Favorite music</li>
+          <li class="datosUser"><i class="small m-left material-icons">perm_identity</i>I'm going places</li>
         </ul>
       </div>
     </div>
@@ -34,7 +34,6 @@
   <script src="country-dropdown/js/jquery/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>  
   <script type="text/javascript" src="js/materialize.min.js"></script>     
-  <script type="text/javascript" src="js/gmaps.js"></script>
-</body>
+  </body>
 </html>
 
