--- a/registro.html
+++ b/registro.html
@@ -33,9 +33,7 @@
 		</div>
 		<div class="ocultar alert" id="alertDigitos"></div>
 		<div class="ocultar alert" id="codigoCel"></div>
-		<div id="siguiente" class="next">
-		  <a class="nextText">NEXT</a>
-		</div>
+		<a id="siguiente" class="next">NEXT</a>
 	</div>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/app.js"></script>
