--- a/user.html
+++ b/user.html
@@ -11,7 +11,7 @@
 	<body>
 		<header class="container">
 			<div class="row">
-				<div class="col-xs-2">
+				<div class="col-xs-2 botonx">
 					<a href="profile.html" class="glyphicon glyphicon-remove cerrar" aria-hidden="true"></a>
 				</div>
 				<div class="col-xs-7">
@@ -28,7 +28,7 @@
 					<div class="col-xs-4 padding">
 						<img src="images/photo.jpg" class="fotoUsurario">
 					</div>
-					<div class="col-xs-8">
+					<div class="col-xs-8 photoEdit">
 						<p>Profile photo</p>
 					</div>
 				</a>
@@ -37,6 +37,5 @@
 	<script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	  <script type="text/javascript" src="js/app.js"></script>
 	  <script type="text/javascript" src="js/maps.js"></script>
-	  <script type="text/javascript" src="js/api_map.js"></script>
 	</body>
 </html>
