--- a/codigo.html
+++ b/codigo.html
@@ -30,9 +30,7 @@
 			<p>Enter the code sent to +51 <span id="numCel"></span></p>
 			<a "><button id="resendCode" class="btn btn-default btn-lg btn-siguiente">Resend code</button></a>
 		</div>
-		<div class="next">
-		    <a id="validCode" class="nextText" >NEXT</a>
-		</div>
+		<a id="validCode" class="next">NEXT</a>
 	</div>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/app.js"></script>
