cambios de validacion

--- a/registro.html
+++ b/registro.html
@@ -26,7 +26,7 @@
 		          <li><a href="#"></a></li>
 		        </ul>
 		      </div>
-		      <input class="form-control" name="phone" id="phoneId" type="telefono" maxlength="9" placeholder="987 654 321">
+		      <input class="form-control" name="phone" id="phoneId" type="tel" maxlength="9" placeholder="987 654 321">
 		    </div>
 		  	<div class="s-title"><h5>We'll send a text to verify your phone</h5></div>
 		  </div>
