--- a/ubicacion.html
+++ b/ubicacion.html
@@ -40,7 +40,7 @@
     <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	  <script type="text/javascript" src="js/api_map.js"></script>
 	  <script type="text/javascript" src="js/app.js"></script>
-	  <script type="text/javascript" src="js/maps.js"></script>
+<!--     <script type="text/javascript" src="js/maps.js"></script> -->
 	  <script type="text/javascript" src="js/materialize.js"></script>
 	  <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
